--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@expo/metro-runtime": "~3.2.1",
+    "expo": "^51.0.8",
+    "expo-status-bar": "~1.12.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-web": "~0.19.6"
   },
