--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Copinha",
+  "name": "copinha",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
-    "expo": "^51.0.8",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.30",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.75.2",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-web": "~0.19.6"
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.31.1",
+    "react-native-web": "~0.19.6",
+    "typescript": "~5.3.3",
+    "use-latest-callback": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
