--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.6",
     "typescript": "~5.3.3",
-    "use-latest-callback": "^0.2.1"
+    "use-latest-callback": "^0.2.1",
+    "expo-image-picker": "~15.0.7",
+    "expo-sqlite": "~14.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
