--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@types/react": "~18.2.79",
     "expo": "^51.0.30",
+    "expo-image-picker": "~15.0.7",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -24,9 +27,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.6",
     "typescript": "~5.3.3",
-    "use-latest-callback": "^0.2.1",
-    "expo-image-picker": "~15.0.7",
-    "expo-sqlite": "~14.0.6"
+    "use-latest-callback": "^0.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
