Adicionando logica de adicionar, remover, exibir e editar times

--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#2C2C2C"
       }
     },
     "web": {
